k8s/notificaciones.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificaciones
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notificaciones
  template:
    metadata:
      labels:
        app: notificaciones
    spec:
      containers:
      - name: notificaciones
        image: notificaciones:latest
        ports:
        - containerPort: 8082
