k8s/usuarios.yaml
apiVersion: v1
kind: Service
metadata:
  name: usuarios
spec:
  selector:
    app: usuarios
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
